tests/samples/valid/binary_integer_66_bit.pn
fn main() -> u8
{
	var x =
		0b110100111010111101110111110001100010100110011000101010110010101100;
	var y = 61014168623649041580u128;
	var result = -1;
	if x == y
	{
		result = 200;
	}
	return: result
}
