tests/samples/invalid/invalid_integer_suffix.pn
fn main()
{
	var x = 123127312i63;
	var y = 0x;
}
